--- a/app/src/main/res/values/Style.xml
+++ b/app/src/main/res/values/Style.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <style name="title">
-        <item name="android:textSize">28dp</item>
+        <item name="android:textSize">28sp</item>
         <item name="android:letterSpacing">-0.02</item>
         <item name="android:textStyle">bold</item>
     </style>
     <style name="title1">
-        <item name="android:textSize">25dp</item>
+        <item name="android:textSize">25sp</item>
         <item name="android:letterSpacing">-0.02</item>
         <item name="android:textStyle">bold</item>
     </style>
     <style name="title1_1">
-        <item name="android:textSize">15dp</item>
+        <item name="android:textSize">15sp</item>
         <item name="android:letterSpacing">-0.02</item>
         <item name="android:textStyle">bold</item>
     </style>
