--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -26,7 +26,7 @@
     <color name="text_brown">#331C0F</color>
     <color name="white_card">#F8F8F8</color>
 
-
+    <color name="light_orange_bg">#FFF7F0</color>
 
     <!---->
     <!-- 메인 -->
